<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient_bg">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_title"
        android:textFontWeight="700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/big_gap"
        android:layout_marginTop="67dp"/>

    <LinearLayout
        android:id="@+id/Form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="@dimen/big_gap"
        android:layout_marginRight="@dimen/big_gap"
        app:layout_constraintTop_toBottomOf="@id/Title"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_email_input_title"
            android:fontFamily="@font/inter_bold"
            android:textFontWeight="700"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_gap"
            android:background="@drawable/input_shape"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email_input_placeholder"
            android:textColorHint="@color/white_alpha_50"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingStart="@dimen/mid_gap"

            android:textCursorDrawable="@drawable/custom_cursor"

            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_password_title"
            android:fontFamily="@font/inter_bold"
            android:textFontWeight="700"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/big_gap"/>

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_gap"
            android:background="@drawable/input_shape"
            android:inputType="textPassword"
            android:hint="@string/register_password_placeholder"
            android:textColorHint="@color/white_alpha_50"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingStart="@dimen/mid_gap"

            android:textCursorDrawable="@drawable/custom_cursor"

            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_password_repeat_title"
            android:fontFamily="@font/inter_bold"
            android:textFontWeight="700"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/big_gap"/>

        <EditText
            android:id="@+id/PasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_gap"
            android:background="@drawable/input_shape"
            android:inputType="textPassword"
            android:hint="@string/register_password_repeat_placeholder"
            android:textColorHint="@color/white_alpha_50"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingStart="@dimen/mid_gap"

            android:textCursorDrawable="@drawable/custom_cursor"

            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="@dimen/big_gap"
        android:layout_marginRight="@dimen/big_gap"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register_btn"
            android:background="@drawable/button_shape_rounder_white"
            android:insetTop="0dp"
            android:insetBottom="0dp"

            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:textFontWeight="700"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/min_gap"
            android:textAllCaps="false"
            android:letterSpacing="0"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="364dp"
            android:text="@string/button_back_action"
            android:background="@drawable/button_shape_rounder_white"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:backgroundTint="@color/white_alpha_20"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_bold"
            android:textFontWeight="700"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:letterSpacing="0"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>